<resources>
    <string name="app_name">PackingList</string>
    <string name="mainTitle">Packing List</string>
    <string name="checkBoxBeach">Beach</string>
    <string name="checkBoxScubaDiving">Scuba Diving</string>
    <string name="checkBoxSkiing">Skiing / Snowboarding</string>
    <string name="checkBoxHiking">Hiking / Mountains</string>
    <string name="mainTitlePurposeOfJourney">Activities</string>
    <string name="checkBoxCityTrip">City Trip</string>
    <string name="mainTitleExpectedConditions">Expected Conditions</string>
    <string name="checkBoxRainWind">Wind</string>
    <string name="checkBoxSnow">Snow</string>
    <string name="mainTitleExpectedTemperature">Expected Temperature</string>
    <string name="radioButtonTempHot">Hot</string>
    <string name="radioButtonTempWarm">Warm</string>
    <string name="radioButtonTempMixed">Mixed</string>
    <string name="radioButtonTempCold">Cold</string>
    <string name="mainTitleExpectedDetails">Details</string>
    <string name="switchWashing">Washing while travelling possible</string>
    <string name="switchBackpacking">Backpacking (save space!)</string>
    <string name="textViewNumberOfDays">Number of days</string>
    <string name="checkBoxSunshine">Sunshine</string>
    <string name="checkBoxRain">Rain</string>
</resources>
