<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="@android:dimen/app_icon_size"
        android:gravity="center"
        android:text="@string/mainTitle"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainTitleActivities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainTitlePurposeOfJourney"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBoxBeach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxBeach" />

    <CheckBox
        android:id="@+id/checkBoxSubaDiving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxScubaDiving" />

    <CheckBox
        android:id="@+id/checkBoxSkiing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxSkiing" />

    <CheckBox
        android:id="@+id/checkBoxHiking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxHiking" />

    <CheckBox
        android:id="@+id/checkBoxCityTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxCityTrip" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CheckBox" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CheckBox" />

</LinearLayout>